--- a/css/creative.css
+++ b/css/creative.css
@@ -111,6 +111,7 @@ p {
 
 .text-faded {
     color: rgba(255,255,255,.7);
+    font-size: 20px;
 }
 
 section {
@@ -311,7 +312,7 @@ header .header-content .header-content-inner p {
     display: block;
     position: relative;
     margin: 0 auto;
-    max-width: 650px;
+    max-width: 400px;
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -339,7 +340,7 @@ header .header-content .header-content-inner p {
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    padding: 0 15px;
+    /*padding: 0 15px;*/
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 
@@ -355,15 +356,17 @@ header .header-content .header-content-inner p {
 
 .portfolio-box:hover .portfolio-box-caption {
     opacity: 1;
+    max-width: 400px;
 }
 
-@media(min-width:768px) {
+@media(min-width:650px) {
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-        font-size: 22px;
+        margin-top: 5px;
+        font-size: 15px;
     }
 }
 
@@ -374,12 +377,6 @@ header .header-content .header-content-inner p {
 .text-primary {
     color: #f05f40;
 }
-
-.no-gutter > [class*=col-] {
-    padding-right: 0;
-    padding-left: 0;
-}
-
 .btn-default {
     border-color: #fff;
     color: #222;
@@ -525,4 +522,22 @@ body {
 }
 #myname{
     color: #FF8000;
+}
+#contact{
+    margin: 0 auto;
+}
+.github, .linkedin, .facebook, .twitter, .instagram{
+    -webkit-transition:all 0.5s ease-out;
+  -moz-transition:all 0.5s ease-out;
+  -ms-transition:all 0.5s ease-out;
+  -o-transition:all 0.5s ease-out;
+  transition:all 0.5s ease-out;
+}
+.github:hover, .linkedin:hover, .facebook:hover, .twitter:hover, .instagram:hover{
+    -webkit-transform:scale(1.3);
+  -moz-transform:scale(1.3);
+  -ms-transform:scale(1.3);
+  -o-transform:scale(1.3);
+  transform:scale(1.3);
+
 }
